# ESP8266-IoT

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  README.md  build.sh  coding_rules.md
Project1/: Alarm.cpp  Alarm.h  ESPTimer.cpp  ESPTimer.h  FakeTimer.cpp  FakeTimer.h  GreetingProvider.cpp  GreetingProvider.h  IPinState.cpp  IPinState.h  ITimer.cpp  ITimer.h  LoginPageProvider.cpp  LoginPageProvider.h  PinStateMock.cpp  Project1.ino  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  RCc03856  Scheduler.cpp  Scheduler.h  Source.cpp  Task.cpp  Task.h  dynamic_file_handlers.cpp  dynamic_file_handlers.h  init.cpp  init.h  login_service.cpp  login_service.h  pins_arduino.cpp  pins_arduino.h  rest_handlers.cpp  rest_handlers.h  routes.cpp  routes.h  scheduler_service.cpp  scheduler_service.h  server.cpp  (+10 more)
Project1UnitTests/: PinStateMock.cpp  PinStateMock.h  Project1UnitTests.cpp  Project1UnitTests.vcxproj  Project1UnitTests.vcxproj.filters
XP-Mock/: app.js  index.html  main.js  (+2 more)
cucumber-cpp/SchedulerBDD/: CMakeLists.txt
cucumber-cpp/SchedulerBDD/features/: scheduling.feature
cucumber-cpp/SchedulerBDD/features/step_definitions/: SchedulerBDDSteps.cpp
cucumber-cpp/SchedulerBDD/src/: ITimer.cpp  PinStateMock.h  Scheduler.cpp  Scheduler.h  Task.cpp  Task.h
cucumber-cpp/examples/Scheduler/: CMakeLists (kopia).txt  CMakeLists.txt
cucumber-cpp/examples/Scheduler/features/: scheduling.feature
cucumber-cpp/examples/Scheduler/features/step_definitions/: SchedulerSteps.cpp
cucumber-cpp/examples/Scheduler/src/: ITimer.cpp  ITimer.h  Task.cpp  Task.h
(+47 files in other folders)
